; ModuleID = '/home/carl/AnghaBench/linux/drivers/media/cec/extr_cec-adap.c_cec_data_completed.c'
source_filename = "/home/carl/AnghaBench/linux/drivers/media/cec/extr_cec-adap.c_cec_data_completed.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

%struct.cec_data = type { i32, i32, i64, i32, i64, i32 }

@llvm.used = appending global [1 x i8*] [i8* bitcast (void (%struct.cec_data*)* @cec_data_completed to i8*)], section "llvm.metadata"

; Function Attrs: noinline nounwind optnone uwtable
define internal void @cec_data_completed(%struct.cec_data* %0) #0 {
  %2 = alloca %struct.cec_data*, align 8
  store %struct.cec_data* %0, %struct.cec_data** %2, align 8
  %3 = load %struct.cec_data*, %struct.cec_data** %2, align 8
  %4 = getelementptr inbounds %struct.cec_data, %struct.cec_data* %3, i32 0, i32 2
  %5 = load i64, i64* %4, align 8
  %6 = icmp ne i64 %5, 0
  br i1 %6, label %7, label %11

7:                                                ; preds = %1
  %8 = load %struct.cec_data*, %struct.cec_data** %2, align 8
  %9 = getelementptr inbounds %struct.cec_data, %struct.cec_data* %8, i32 0, i32 5
  %10 = call i32 @list_del(i32* %9)
  br label %11

11:                                               ; preds = %7, %1
  %12 = load %struct.cec_data*, %struct.cec_data** %2, align 8
  %13 = getelementptr inbounds %struct.cec_data, %struct.cec_data* %12, i32 0, i32 4
  %14 = load i64, i64* %13, align 8
  %15 = icmp ne i64 %14, 0
  br i1 %15, label %16, label %22

16:                                               ; preds = %11
  %17 = load %struct.cec_data*, %struct.cec_data** %2, align 8
  %18 = getelementptr inbounds %struct.cec_data, %struct.cec_data* %17, i32 0, i32 0
  store i32 1, i32* %18, align 8
  %19 = load %struct.cec_data*, %struct.cec_data** %2, align 8
  %20 = getelementptr inbounds %struct.cec_data, %struct.cec_data* %19, i32 0, i32 3
  %21 = call i32 @complete(i32* %20)
  br label %37

22:                                               ; preds = %11
  %23 = load %struct.cec_data*, %struct.cec_data** %2, align 8
  %24 = getelementptr inbounds %struct.cec_data, %struct.cec_data* %23, i32 0, i32 2
  %25 = load i64, i64* %24, align 8
  %26 = icmp ne i64 %25, 0
  br i1 %26, label %27, label %34

27:                                               ; preds = %22
  %28 = load %struct.cec_data*, %struct.cec_data** %2, align 8
  %29 = getelementptr inbounds %struct.cec_data, %struct.cec_data* %28, i32 0, i32 2
  %30 = load i64, i64* %29, align 8
  %31 = load %struct.cec_data*, %struct.cec_data** %2, align 8
  %32 = getelementptr inbounds %struct.cec_data, %struct.cec_data* %31, i32 0, i32 1
  %33 = call i32 @cec_queue_msg_fh(i64 %30, i32* %32)
  br label %34

34:                                               ; preds = %27, %22
  %35 = load %struct.cec_data*, %struct.cec_data** %2, align 8
  %36 = call i32 @kfree(%struct.cec_data* %35)
  br label %37

37:                                               ; preds = %34, %16
  ret void
}

declare dso_local i32 @list_del(i32*) #1

declare dso_local i32 @complete(i32*) #1

declare dso_local i32 @cec_queue_msg_fh(i64, i32*) #1

declare dso_local i32 @kfree(%struct.cec_data*) #1


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
